--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
 <resources>
-    <string name="app_name">EcommercesSparePartMotor</string>
+    <string name="app_name">MSH Custom</string>
     <string name="home_title">Spare Part Motor Honda CB klasik</string>
     <string name="select_categories">Pilih Produk</string>
+    <string name="loading_categories">Memuat Produk...</string>
+    <string name="something_wrong">Ups.., sepertinya ada yang salah!</string>
+    <string name="try_again">Coba Lagi</string>
 </resources>
