add format decimal for total & loading for transaction

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,5 +39,7 @@
     <string name="payment_remain">Sisa waktu pembayaran</string>
     <string name="copied">Berhasil Disalin</string>
     <string name="loading_data">Memuat data...</string>
+    <string name="stock">Stok</string>
+    <string name="loading_transaction">Menuat pembayaran...</string>
 
 </resources>
