--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,5 +56,20 @@
     <string name="register_confirm_password">Password tidak sesuai!</string>
     <string name="loading_register">Mendaftar...</string>
     <string name="register_failed">Gagal mendaftar, harap coba lagi...</string>
+    <string name="title_activity_main">MainActivity</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_header_title">Android Studio</string>
+    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_desc">Navigation header</string>
+    <string name="action_settings">Settings</string>
+
+    <string name="menu_home">Home</string>
+    <string name="menu_gallery">Gallery</string>
+    <string name="menu_slideshow">Slideshow</string>
+    <string name="logout">Logout</string>
+    <string name="my_profile">Profile ku</string>
+    <string name="my_transaction">Pesanan ku</string>
+    <string name="comming_soon">Coming soon...</string>
 
 </resources>
